# ipc-rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: client.rs  server.rs
src/: client.rs  lib.rs  server.rs
