[package]
name = "ipc-rpc"
version = "2.0.0"
edition = "2021"
documentation = "https://docs.rs/ipc-rpc/"
description = "A wrapper over servo/ipc-channel which provides many high level features"
repository = "https://github.com/Xaeroxe/ipc-rpc"
readme = "README.md"
license = "MIT"
keywords = ["ipc", "rpc", "channel", "ipc-channel", "inter-process"]
categories = ["asynchronous", "concurrency"]
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["message-schema-validation"]
message-schema-validation = ["dep:schemars", "dep:serde_json"]

[dependencies]
futures = "0.3"
ipc-channel = "0.20.1"
log = "0.4"
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
thiserror = "2.0"
tokio = { version = "1.7", features = ["sync", "rt-multi-thread", "time", "macros", "process"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.18"
